--- a/BLAZAM/Pages/Install/Install.razor
+++ b/BLAZAM/Pages/Install/Install.razor
@@ -214,7 +214,7 @@
         }
         catch
         {
-            NotificationService.Error("Sorry, ran into an error while finalizing install");
+            await NotificationService.Error("Sorry, ran into an error while finalizing install");
 
             }
 
