--- a/BLAZAM/Pages/Users/ConfirmNewUser.razor
+++ b/BLAZAM/Pages/Users/ConfirmNewUser.razor
@@ -343,15 +343,15 @@
 
 @code {
     [Parameter]
-    public DirectoryTemplate DirectoryTemplate { get; set; }
+    public DirectoryTemplate? DirectoryTemplate { get; set; }
 
     [Parameter]
-    public EventCallback<IADUser> Confirmed { get; set; }
+    public EventCallback<IADUser>? Confirmed { get; set; }
 
     bool InDirectoryTemplate(ActiveDirectoryField field)
     {
         if (DirectoryTemplate == null) return true;
-        return DirectoryTemplate.FieldValues.Any(f => f.Field.FieldName == field.FieldName);
+        return DirectoryTemplate?.FieldValues.Any(f => f.Field.FieldName == field.FieldName)==true;
     }
     async Task ConfirmUser(){
         try{
