--- a/BLAZAM/Shared/Navs/NavMenu.razor
+++ b/BLAZAM/Shared/Navs/NavMenu.razor
@@ -148,7 +148,7 @@
 
     protected override async Task OnInitializedAsync()
     {
-        base.OnInitializedAsync();
+        await base.OnInitializedAsync();
         Monitor.OnDirectoryConnectionChanged += ((state) => { InvokeAsync(StateHasChanged); });
 
 
