--- a/BLAZAM/Shared/UI/Dashboard/Widgets/ChangedPasswordsWidget.razor
+++ b/BLAZAM/Shared/UI/Dashboard/Widgets/ChangedPasswordsWidget.razor
@@ -27,7 +27,7 @@
 
     protected override async Task OnInitializedAsync()
     {
-        base.OnInitializedAsync();
+        await base.OnInitializedAsync();
 
         Name = "Disabled Users";
         LockedUsers = await Directory.Users.FindChangedPasswordUsersAsync(false);
