--- a/BLAZAM/Shared/UI/DirectorySearchPage.razor
+++ b/BLAZAM/Shared/UI/DirectorySearchPage.razor
@@ -112,7 +112,7 @@
 
         //Search();
 
-        InvokeAsync(StateHasChanged);
+        await InvokeAsync(StateHasChanged);
     }
 
     protected async Task Search()
