--- a/BLAZAM/Shared/UI/Settings/SettingsField.razor
+++ b/BLAZAM/Shared/UI/Settings/SettingsField.razor
@@ -17,9 +17,9 @@
 @code {
 
     [Parameter]
-    public RenderFragment FieldLabel { get; set; }
+    public RenderFragment? FieldLabel { get; set; }
     [Parameter]
-    public RenderFragment FieldBody { get; set; }
+    public RenderFragment? FieldBody { get; set; }
     [Parameter]
-    public RenderFragment FieldHelp { get; set; }
+    public RenderFragment? FieldHelp { get; set; }
 }
