--- a/BLAZAM/Shared/UI/Settings/SystemSettings.razor
+++ b/BLAZAM/Shared/UI/Settings/SystemSettings.razor
@@ -27,7 +27,7 @@
 
     protected override async Task OnInitializedAsync()
     {
-        Task.Run(() =>
+        await Task.Run(() =>
         {
             settings = Context.AppSettings.FirstOrDefault();
             LoadingData = false;
