--- a/BLAZAM/Shared/UI/Users/NewTemplateUser.razor
+++ b/BLAZAM/Shared/UI/Users/NewTemplateUser.razor
@@ -357,11 +357,10 @@
 
 @code {
 
-    bool EditMode = false;
 
 
     [Parameter]
-    public DirectoryTemplate DirectoryTemplate { get; set; }
+    public DirectoryTemplate? DirectoryTemplate { get; set; }
 
 
 
