--- a/BLAZAM/Pages/Search.razor
+++ b/BLAZAM/Pages/Search.razor
@@ -149,7 +149,7 @@
         SearchService.SearchTerm = SearchTermParameter;
         Searcher.GeneralSearchTerm = SearchTermParameter;
 
-        base.OnInitializedAsync();
+        await base.OnInitializedAsync();
 
 
 
