--- a/BLAZAM/Shared/UI/AppModal.razor
+++ b/BLAZAM/Shared/UI/AppModal.razor
@@ -13,19 +13,19 @@
 @code {
 
     [Parameter]
-    public DatabaseContext Context { get; set; }
+    public DatabaseContext? Context { get; set; }
 
     [Parameter]
-    public string Title{ get; set; }
+    public string? Title{ get; set; }
 
     [Parameter]
-    public RenderFragment ChildContent{ get; set; }
+    public RenderFragment? ChildContent{ get; set; }
 
     [CascadingParameter]
     protected Modal? Modal { get; set; }
 
     [Parameter]
-    public EventCallback<Modal> ModalChanged { get; set; }
+    public EventCallback<Modal>? ModalChanged { get; set; }
 
     bool _isShown = false;
 
@@ -43,13 +43,13 @@
     public void Show()
     {
         IsShown = true;
-        Modal.Show();
+        Modal?.Show();
     }
     public void Hide()
     {
         IsShown = false;
 
-        Modal.Close(CloseReason.UserClosing);
+        Modal?.Close(CloseReason.UserClosing);
     }
 
 }
