--- a/BLAZAM/Shared/UI/Groups/AddMemberModalContent.razor
+++ b/BLAZAM/Shared/UI/Groups/AddMemberModalContent.razor
@@ -61,8 +61,8 @@
         if (Entry is IGroupableDirectoryModel groupableEntry)
         {
             Group.AssignMember(groupableEntry);
-            NotificationService.Warning(groupableEntry.CanonicalName + " has been assigned to " + Group.GroupName + " but changes must be saved.", "Assignment Pending");
-            ModelChanged.InvokeAsync();
+            await NotificationService.Warning(groupableEntry.CanonicalName + " has been assigned to " + Group.GroupName + " but changes must be saved.", "Assignment Pending");
+            await ModelChanged.InvokeAsync();
 
             Close();
         }
@@ -73,8 +73,8 @@
                 Group.AssignMember(member);
                
             }
-            NotificationService.Warning("The selected members have been assigned to " + Group.GroupName + " but changes must be saved.", "Assignment Pending");
-            ModelChanged.InvokeAsync();
+            await NotificationService.Warning("The selected members have been assigned to " + Group.GroupName + " but changes must be saved.", "Assignment Pending");
+            await ModelChanged.InvokeAsync();
 
             Close();
         }
