--- a/BLAZAM/Shared/UI/OU/RenameOUModalContent.razor
+++ b/BLAZAM/Shared/UI/OU/RenameOUModalContent.razor
@@ -33,7 +33,7 @@
     
         async Task SaveChanges()
     {
-        NotificationService.Warning("The ou has been renamed but changes must be saved.", "OU renamed");
+        await NotificationService.Warning("The ou has been renamed but changes must be saved.", "OU renamed");
         Close();
 
     }
