--- a/BLAZAM/Shared/UI/Settings/ActiveDirectoryStatusPanel.razor
+++ b/BLAZAM/Shared/UI/Settings/ActiveDirectoryStatusPanel.razor
@@ -70,7 +70,7 @@
 
     private async void UpdateStatus(object? state)
     {
-        Task.Run(async () =>
+        await Task.Run(async () =>
         {
             if (_monitoring == false)
             {
