--- a/BLAZAM/Shared/UI/Settings/EmailSettings.razor
+++ b/BLAZAM/Shared/UI/Settings/EmailSettings.razor
@@ -198,7 +198,7 @@
         try
         {
             await EmailService.SendTestEmail(testRecipient);
-            MessageService.Success("A test email was sent to " + testRecipient, "Test Email Sent");
+            await MessageService.Success("A test email was sent to " + testRecipient, "Test Email Sent");
 
         }
         catch (Exception ex)
