--- a/BLAZAM/Shared/UI/Settings/ManualApplicationUpdater.razor
+++ b/BLAZAM/Shared/UI/Settings/ManualApplicationUpdater.razor
@@ -102,7 +102,7 @@ else
 }
 
 @code {
-    ApplicationUpdate LatestAvailableVersion { get; set; }
+    ApplicationUpdate? LatestAvailableVersion { get; set; }
 
     UpdateStage updateStage = UpdateStage.None;
 
@@ -116,11 +116,11 @@ else
         LatestAvailableVersion = await UpdateService.GetLatestUpdate();
         updateChecked = true;
         LoadingData = false;
-        InvokeAsync(StateHasChanged);
+        await InvokeAsync(StateHasChanged);
     }
     async Task ApplyUpdate()
     {
-        NotificationService.Info("Update started. Downloading update...");
+        await NotificationService.Info("Update started. Downloading update...");
 
         updateStage = UpdateStage.Downloading;
         LatestAvailableVersion.DownloadPercentageChanged += UpdateDownloadPercentage;
@@ -153,12 +153,12 @@ else
                     {
                         updateStage = UpdateStage.BackingUp;
 
-                        InvokeAsync(StateHasChanged);
+                        await InvokeAsync(StateHasChanged);
                         if (!await LatestAvailableVersion.Backup())
                         {
 
 
-                            NotificationService.Error("Backup failed.");
+                            await NotificationService.Error("Backup failed.");
                             return;
 
                         }
@@ -168,17 +168,17 @@ else
                         updateStage = UpdateStage.Applying;
 
 
-                        InvokeAsync(StateHasChanged);
+                        await InvokeAsync(StateHasChanged);
 
                         var output = await LatestAvailableVersion.Apply();
                         if (output != null)
                         {
-                            NotificationService.Success("Update started successfully. The web application will restart and update momentarily.");
+                            await NotificationService.Success("Update started successfully. The web application will restart and update momentarily.");
 
                         }
                         if (Program.InDebugMode)
                         {
-                            MessageService.Info(output);
+                            await MessageService.Info(output);
 
                         }
 
@@ -195,7 +195,7 @@ else
         }
         else
         {
-            NotificationService.Error("Update failed.");
+            await NotificationService.Error("Update failed.");
             updateStage = UpdateStage.None;
 
         }
@@ -210,7 +210,7 @@ else
     {
 
         DownladProgress = progress;
-        InvokeAsync(StateHasChanged);
+        await InvokeAsync(StateHasChanged);
 
     }
     protected void UpdateDB()
