Second half of cleanup

--- a/BLAZAM/Pages/Users/ConfirmNewUser.razor
+++ b/BLAZAM/Pages/Users/ConfirmNewUser.razor
@@ -346,7 +346,7 @@
     public DirectoryTemplate? DirectoryTemplate { get; set; }
 
     [Parameter]
-    public EventCallback<IADUser>? Confirmed { get; set; }
+    public EventCallback<IADUser> Confirmed { get; set; }
 
     bool InDirectoryTemplate(ActiveDirectoryField field)
     {
