--- a/BLAZAM/Shared/UI/Users/ChangeUserPasswordModalContent.razor
+++ b/BLAZAM/Shared/UI/Users/ChangeUserPasswordModalContent.razor
@@ -69,11 +69,11 @@
         //User.CommitChanges();
         if (User.SetPassword(newPassword.ToSecureString()))
         {
-            NotificationService.Success("Changed password for " + User.DisplayName, "Password Changed");
+            await NotificationService.Success("Changed password for " + User.DisplayName, "Password Changed");
         }
         else
         {
-            NotificationService.Error("Unable to set password for " + User.DisplayName, "Change Failed");
+            await NotificationService.Error("Unable to set password for " + User.DisplayName, "Change Failed");
 
         }
         Close();
