--- a/BLAZAM/Pages/Search.razor
+++ b/BLAZAM/Pages/Search.razor
@@ -101,7 +101,7 @@
 
     string ModelsTypeName = "Search";
     protected string SearchIcon { get; set; } = "fa-solid fa-building";
-    string _searchTermParameter;
+    string? _searchTermParameter;
     /// <summary>
     /// The search term that comes from the URI
     /// </summary>
@@ -167,7 +167,7 @@
                  InvokeAsync(StateHasChanged);
              });
 
-        PerformSearch();
+        await PerformSearch();
         await InvokeAsync(StateHasChanged);
 
     }
@@ -189,7 +189,7 @@
 
         //Search();
 
-        InvokeAsync(StateHasChanged);
+        await InvokeAsync(StateHasChanged);
     }
 
    
@@ -212,7 +212,7 @@
 
         LoadingData = false;
 
-        InvokeAsync(StateHasChanged);
+        await  InvokeAsync(StateHasChanged);
 
 
 
