--- a/BLAZAM/Shared/UI/Dashboard/Widgets/LockedOutUsers.razor
+++ b/BLAZAM/Shared/UI/Dashboard/Widgets/LockedOutUsers.razor
@@ -22,12 +22,12 @@
 
     protected override async Task OnInitializedAsync()
     {
-        base.OnInitializedAsync();
+        await base.OnInitializedAsync();
 
         Name = "Locked Out Users";
         LockedUsers = (await Directory.Users.FindLockedOutUsersAsync()).OrderByDescending(u=>u.LockoutTime).Where(u=>u.CanRead).ToList();
         LoadingData = false;
-        InvokeAsync(StateHasChanged);
+        await InvokeAsync(StateHasChanged);
     }
     
 
