--- a/BLAZAM/Shared/UI/Settings/DirectorySettings.razor
+++ b/BLAZAM/Shared/UI/Settings/DirectorySettings.razor
@@ -7,8 +7,8 @@
     <Row Padding="Padding.Is1.OnMobile.Is2.OnTablet.Is3.OnDesktop.Is4.OnWidescreen.Is5.OnFullHD">
         <Heading>@SettingsLocalization["Active Directory Settings"]</Heading>
 
-       @* <Column ColumnSize="ColumnSize.Is4.OnDesktop">
-            <ActiveDirectoryStatusPanel />
+        @* <Column ColumnSize="ColumnSize.Is4.OnDesktop">
+        <ActiveDirectoryStatusPanel />
         </Column>*@
         <Column ColumnSize="ColumnSize.Is12.OnDesktop">
             <Form @onsubmit="Save">
@@ -19,14 +19,14 @@
                             <FieldLabel>@SettingsLocalization["Server"]</FieldLabel>
                             <FieldHelp>Can be your domain name in most environments</FieldHelp>
                             <FieldBody>
-                                @if(Program.InDemoMode && UserStateService.CurrentUsername != "admin")
+                                @if (Program.InDemoMode && UserStateService.CurrentUsername != "admin")
                                 {
 
                                     <TextEdit Text="Private" Disabled>
-                                            <Feedback>
-                                                <ValidationError />
-                                            </Feedback>
-                                        </TextEdit>
+                                    <Feedback>
+                                        <ValidationError />
+                                    </Feedback>
+                                </TextEdit>
                                 }
                                 else
                                 {
@@ -59,10 +59,10 @@
                                 @if (Program.InDemoMode && UserStateService.CurrentUsername != "admin")
                                 {
                                     <NumericEdit Margin=Margin.IsAuto.OnY Value="0" Disabled>
-                                        <Feedback>
-                                            <ValidationError />
-                                        </Feedback>
-                                    </NumericEdit>
+                                    <Feedback>
+                                        <ValidationError />
+                                    </Feedback>
+                                </NumericEdit>
                                 }
                                 else
                                 {
@@ -74,7 +74,7 @@
                                     </NumericEdit>
 
                                 }
-                             
+
                             </FieldBody>
 
 
@@ -174,22 +174,21 @@
 
     protected override async Task OnInitializedAsync()
     {
-        Task.Run(async () =>
-        {
-            var set = Context.ActiveDirectorySettings.FirstOrDefault();
-            if (set != null)
-            {
-                settings = set;
-                passwordInDb = settings?.Password;
 
-            }
-            else
-            {
-                _insert = true;
-            }
-            LoadingData = false;
-            await InvokeAsync(StateHasChanged);
-        });
+        var set = await Context.ActiveDirectorySettings.FirstOrDefaultAsync();
+        if (set != null)
+        {
+            settings = set;
+            passwordInDb = settings?.Password;
+
+        }
+        else
+        {
+            _insert = true;
+        }
+        LoadingData = false;
+        await InvokeAsync(StateHasChanged);
+
     }
     protected override async void Save()
     {
